--- a/arst/index.html
+++ b/arst/index.html
@@ -7,7 +7,7 @@
     <strong>arisetnareiostni</strong>
     <p class="param first fuckyou" id="느거멍">farseitneiorsntoei</p>
     <p>arstartrstreitanrei<br />otnioantrnstie</p>
-    <h1>존나 큰 제목</h1>
+    <h1>유링게슝한 제목</h1>
     <h2>조금 덜 큰 제목</h2>
     <h3>더 조금 덜 큰 제목</h3>
     <h4>소제목</h4>
